Add links to sources in index

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js" integrity="sha512-WIklPM6qPCIp6d3fSSr90j+1unQHUOoWDS4sdTiR8gxUTnyZ8S2Mr8e10sKKJ/bhJgpAa/qG068RDkg6fIlNFA==" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/game.js"></script >
+    <link rel="stylesheet" href="css/gameStyle.css" />
     <title>Coding Club Game Demo</title>
   </head>
   <body>
